css/layout.css
@import "./reset.css";
@import "./fonts.css";



/* Gradient Color list */
.primary_gradient {
  background: linear-gradient(135.32deg, #2266BE 0%, #799FD3 75.14%);
}
.secondary_gradient {
  background: rgba(116, 155, 210, 0.5);
}
.bg1 {
  background-color: #F1F6FF;
}
.bg2 {
  background-color: #E9F1FF;
}
.bg3 {
  background-color: #B5D5FF;
}

.ub_py {
  padding: 60px 0;
}
.light_blue {
  background-color: #DFEDFF;
}
.dark_blue {
  background-color: #BFDBFF;
}
.text_blue {
  color: #5C7BA6;
}

.ub_d_flex {
  display: flex;
  justify-content: left;
  align-items: center;
}

/* radius class */
.ubc_bod_radius1 {
  border-radius: 12px;
}
.seprator {
  background-color: #B4B4B4;
  width: 1px;
  height: 40px;
}
section {
  padding: 0 0 70px 0;
}
.prime_heading {
  font-size: 74px;
  line-height: 88px;
  font-weight: 500;
  color: #ffffff;
  padding: 0;
  margin: 0;
}
.secondary_heading {
  font-size: 56px;
  line-height: 67px;
  font-weight: 500;
  color: #295BAD;
  padding: 0 0 60px 0;
  margin: 0;
}
.prime_desc {
  font-size: 24px;
  line-height: 36px;
  font-weight: 400;
  color: #ffffff;
  padding: 0 0 18px 0;
  margin: 0;
}
.small_sub_desc {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #ffffff;
  padding: 12px 0 0 0;
  margin: 0;
}
.heading_desc {
  font-size: 18px;
  line-height: 25px;
  font-weight: 500;
  color: #626271;
}
.heading_desc2 {
  font-size: 16px;
  line-height: 22px;
  font-weight: 400;
  color: #5C7BA6;
}
/* buttons */
.btn_primary {
  background: #000;
  padding:14px 30px;
  color: #fff;
  border-radius: 8px;
  display: flex;
  justify-content: right;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  border: none;
}

header {
  padding-top: 25px;
  padding-bottom: 60px;
}

.header {
  /* max-width: 1400px;
  width: 100%; */
  border-radius: 12px;
  padding: 20px 40px;
}

.logo_box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 16px;
}

.nav_main {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: auto;
}
.nav_bar {
  list-style: none;
  display: flex;
  gap: 48px;
  margin-right: 200px;
}
.nav_bar li{
  line-height: normal;
}
.nav_bar li a{
  line-height: 20px;
  font-size: 16px;
  font-weight: 400;
  color: #ffffff;
  text-decoration: none;
}

.ub_benifits {
  border-radius: 8px;
  text-align: center;
  padding: 36px 0 0 0;
}
.ub_ben_block {
  padding: 0 60px;
}
.ub_content-wrap {
  min-height: 20vh;
  height: 100%;
}
.ub_benifits h4 {
  color: #000000;
  font-size: 26px;
  line-height: 30px;
  font-weight: 600;
  padding-bottom: 20px;
}
.ub_benifits p {
  color: #5C7BA6;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  padding-bottom: 10px;
}
.ub_benifits img {
  /* width: 350px; */
  height: 185px;
}
.info_section {
  display: flex;
  justify-content: left;
  align-items: center;
  padding: 0;
  margin: 0;
  font-size: 18px;
  line-height: 20px;
  font-weight: 500;
  color: #646464;
}
.info_icon {
  background-color: #fff;
  padding: 6px;
  border-radius: 100%;
  margin-left: 12px;
  margin-right: 12px;
  
}
.vehicle_options {
  background-color: #CFEDFF;
  border-radius: 24px;
}
.vehicle_options.dark_blue {
  background-color: #BFDBFF;
}
.vehicle_options.yellow_light {
  background-color: #FFF8EA;
}
.vehicle_view {
  position: relative;
  padding: 28px 30px;
  height: 266px;  

}
.vehicle_view::before {
  display: block;
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  background: url("../img/pattern.png") no-repeat left top;
  width: 100%;
  background-size: auto;
  height: 100%;
  background-size: cover;
  border-top-right-radius: 24px;
  border-top-left-radius: 24px;
}
.vehicle_info {
  padding: 28px 24px;
  min-height: 45vh;
  height: 100%;
}
.vehicle_info h3 {
  color: #262626;
  font-size: 32px;
  line-height: 48px;
  font-weight: 700;
  padding-bottom: 16px;
}

.vehicle_info_list {
  list-style: disc;
  margin-left: 20px;
}
.vehicle_info_list li{
  line-height: normal;
  color: #4F545B;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  padding-bottom: 5px;
}
.feature_list {
  list-style: none;
  margin: 40px 0 0 0;
}
.feature_list li{
  line-height: normal;
  color: #4F545B;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  padding-bottom: 30px;
}
.feature_list li h5{
  color: #2266BE;
  font-size: 24px;
  line-height: 28px;
  font-weight: 600;
  padding-bottom: 14px;
  line-height: normal;
}
.feature_list li p{
  color: #5C7BA6;
  font-size: 16px;
  line-height: 22px;
  font-weight: 400;
  padding-bottom: 10px;
  line-height: normal;
}

.ub_intrest {
  padding-top: 37px;
}

.smart_ride_list {
  list-style: none;
  display: flex;
  margin-top: 52px;
}
.smart_ride_list li {
  line-height: normal;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0 10px 0 10px;
}
.smart_ride_list li i{
  background: rgba(180, 211, 255, 0.5);
  border-radius: 24px;
  width: 124px;
  height: 124px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 12px;
}
.smart_ride_list li span{
font-size: 18px;
line-height: 22px;
font-weight: 500;
color: #293B55;
}

.icon_w_bg {
  background: rgba(180, 211, 255, 0.5);
  border-radius: 8px;
  padding: 14px;
  width: 60px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 12px;
}
.icon_w_bg.bg_none {
  background: none;
}
.icon_w_bg_text {
font-size: 24px;
font-weight: 600;
line-height: 30px;
color: #000000;
}
.uc_diff_box {
  border: 8px solid rgba(230, 237, 245, 1);
  background-color: #fff;
  border-radius: 24px;
  padding: 40px 28px;
  transition: .5s all ease-in-out;
}
.box_border {
  border: 8px solid rgba(37, 37, 37, 1);
}

.client_logo {
  padding-bottom: 39px;
}

.ub_heading_small {
  color: #353535;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  text-transform: uppercase;
  margin-bottom: 25px;
}
.compare_list {
list-style: none;  
}

.compare_list li{
font-size: 16px;
line-height: 32px;
font-weight: 500;
color: #646464;
position: relative;
padding-left: 44px;
padding-bottom: 16px;
}

.compare_list li::before{
position: absolute;
content: '🚫';
left: 0;
top: 0;
background-color: rgba(255, 242, 242, 1);
width: 32px;
height: 32px;
border-radius: 6px;
text-align: center;
display: flex;
align-items: center;
justify-content: center;
}
.compare_list.emozi_bg_color li::before {
  content: '👍';
  background-color: rgba(255, 247, 223, 1);
}
.uc_coll {
  flex: 50%;
  max-width: 50%;
  padding: 0 10px;
  display: flex;
  flex-wrap: wrap;
}
.uc_coll img {
  margin-bottom: 0;
  border-radius: 10px;
  vertical-align: middle;
}

.uc_faqs {
  
}
.uc_faqs .accordion-item {
margin-bottom: 16px;
border-radius: 8px;
border: 1px solid #D5DFEC;
background: rgba(235, 243, 255, 0.5);
}
.uc_faqs .accordion-header {
background: rgba(235, 243, 255, 0.5);
}
.uc_faqs .accordion-button {
  background: rgba(235, 243, 255, 0.5);
  font-size: 18px;
  line-height: 27px;
  color: #000;
  font-weight: 500;
}
.uc_faqs .accordion-button:focus {
  border-color: none;
  box-shadow: none;
  background: rgba(235, 243, 255, 0.5);
}
.uc_faqs .accordion-button:not(.collapsed) {
  background: rgba(235, 243, 255, 0.5);
  box-shadow: none;
  font-size: 18px;
line-height: 27px;
color: #000;
font-weight: 500;
}
.uc_faqs .accordion-body {
  padding-top: 0;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  color: #717984;
}

.footer_part {
  background-color: #0F0F0F;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
  padding: 16px 0;
  color: #ffffff;
}

.more_question {
  margin-top: 48px;
}
.more_question h2{
font-size: 24px;
line-height: 36px;
font-weight: 500;
color: #000;
padding-bottom: 4px;
}
.more_question p{
font-size: 16px;
line-height: 24px;
font-weight: 400;
color: #686868;
}
.input_box {
  border-bottom: 1px solid #A4A4A4;
  max-width: 673px;
  width: 100%;
  margin-top: 25px;
  display: flex;
  justify-content: space-between;
}
.input_box input{
  border: none;
  background-color: transparent;
  width: 80%;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #000;
}
.input_box input:focus{
  border: none;
  outline: none;
}
.form_btn {
  background: none;
  border: none;
}


@media only screen and (max-width: 992px) {
  .vehicle_info {
    height: 70vh;
  }
  .footer_part {
    font-size: 12px;
    line-height: 16px;
  }
 }

 @media only screen and (max-width: 991px) {
  .vehicle_view {
    height: auto;
  }
  .vehicle_info {
    height: 100%;
  }
  .more_question h2 {
    font-size: 18px;
    line-height: 27px;
  }
  .more_question p {
    font-size: 12px;
    line-height: 18px;
  }
  .input_box input{
    font-size: 12px;
    line-height: 18px;
  }
  .form_btn img {
   width: 24px;
  }
  
 
 }


@media only screen and (max-width: 767px) {
  .header {
    padding: 11px 12px;
    border-radius: 4.86px;
  }
  .logo_box img{
    width: 90px;
  }
  .vehicle_info {
    height: 100%;
  }
}

